--- a/app/src/main/res/layout/offer_peril_section.xml
+++ b/app/src/main/res/layout/offer_peril_section.xml
@@ -38,6 +38,7 @@
         android:id="@+id/perilsContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
         android:orientation="horizontal" />
 
