--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -11,10 +11,12 @@
         <item>system_default</item>
     </string-array>
     <string-array name="language_settings">
+        <item>@string/SETTINGS_LANGUAGE_SYSTEM_DEFAULT</item>
         <item>@string/SETTINGS_LANGUAGE_SWEDISH</item>
         <item>@string/SETTINGS_LANGUAGE_ENGLISH</item>
     </string-array>
     <string-array name="language_settings_values">
+        <item>system_default</item>
         <item>sv-SE</item>
         <item>en-SE</item>
     </string-array>
