Notification settings on settings screen

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -18,6 +18,10 @@
             app:title="@string/SETTINGS_LANGUAGE_TITLE"
             app:useSimpleSummaryProvider="true" />
 
+        <Preference
+            app:key="notifications"
+            app:title="@string/SETTINGS_NOTIFICATIONS_TITLE" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
