--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -20,19 +20,41 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/closeOrRestart"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|start"
             android:layout_marginStart="@dimen/base_margin"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/CHAT_CLOSE_DESCRIPTION"
-            android:padding="@dimen/base_margin"
-            android:visibility="gone"
-            tools:srcCompat="@drawable/ic_close"
-            tools:tint="@color/icon_tint"
-            tools:visibility="visible" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/close"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|start"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:padding="@dimen/base_margin"
+                android:tint="@color/icon_tint"
+                android:visibility="gone"
+                app:srcCompat="@drawable/ic_close"
+                tools:visibility="visible" />
+
+            <ImageView
+                android:id="@+id/restart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|start"
+                android:layout_marginStart="@dimen/base_margin"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="@string/CHAT_CLOSE_DESCRIPTION"
+                android:padding="@dimen/base_margin"
+                android:tint="@color/icon_tint"
+                android:visibility="gone"
+                app:srcCompat="@drawable/ic_restart_chat"
+                tools:visibility="visible" />
+        </LinearLayout>
 
         <ImageView
             android:layout_width="wrap_content"
