--- a/app/src/main/res/layout/activity_birthday.xml
+++ b/app/src/main/res/layout/activity_birthday.xml
@@ -6,4 +6,45 @@
     android:layout_height="match_parent"
     tools:context="com.hedvig.app.feature.birthday.BirthdayActivity">
 
+    <TextView
+        android:id="@+id/happyBirthdayText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/circular_bold"
+        android:text="Happy Birthday"
+        android:textColor="#0D0066"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="200dp"/>
+
+    <TextView
+        android:id="@+id/fromText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/circular_bold"
+        android:text="From"
+        android:textColor="#0D0066"
+        android:textSize="26dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/happyBirthdayText" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/confetti_animation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintBottom_toBottomOf="@+id/happyBirthdayText"
+
+        app:layout_constraintEnd_toEndOf="@+id/happyBirthdayText"
+        app:layout_constraintStart_toStartOf="@+id/happyBirthdayText"
+        app:layout_constraintTop_toTopOf="@+id/happyBirthdayText"
+        app:lottie_autoPlay="false"
+        app:lottie_loop="false"
+        app:lottie_rawRes="@raw/confetti_animation" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
