added spacing to dimens.xml

--- a/app/src/main/res/layout/activity_birthday.xml
+++ b/app/src/main/res/layout/activity_birthday.xml
@@ -17,7 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="200dp"/>
+        android:layout_marginBottom="@dimen/happy_birthday_spacing"/>
 
     <TextView
         style="@style/Header"
