added button to change date

--- a/app/src/main/res/layout/activity_offer.xml
+++ b/app/src/main/res/layout/activity_offer.xml
@@ -106,7 +106,9 @@
 
                 <include layout="@layout/price_bubbles" />
 
-                <include layout="@layout/feature_bubbles" />
+                <include
+                    android:id="@+id/featureBubbles"
+                    layout="@layout/feature_bubbles" />
 
             </LinearLayout>
 
