--- a/app/src/main/res/drawable/ic_expand.xml
+++ b/app/src/main/res/drawable/ic_expand.xml
@@ -1,12 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="16dp"
+    android:height="16dp"
+    android:viewportWidth="16"
+    android:viewportHeight="16">
   <path
-      android:pathData="M20.6468,6.9632l0.7071,0.7071l-9.3536,9.3536l-9.3536,-9.3536l0.7071,-0.7071l8.6464,8.6464z"
+      android:pathData="M0,0h16v16H0z"
+      android:strokeAlpha="0.01"
+      android:fillColor="#0F007A"
+      android:fillType="evenOdd"
+      android:fillAlpha="0.01"/>
+  <path
       android:strokeWidth="1"
-      android:fillColor="#9B9BAA"
-      android:fillType="nonZero"
-      android:strokeColor="#00000000"/>
+      android:pathData="M2,5l6,6 6,-6"
+      android:fillColor="#00000000"
+      android:strokeColor="#FFF"
+      android:fillType="evenOdd"/>
 </vector>
