--- a/app/src/main/res/layout/feature_bubbles.xml
+++ b/app/src/main/res/layout/feature_bubbles.xml
@@ -223,18 +223,34 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
+        android:id="@+id/dateButton"
+        style="@style/HedvigButton.Outlined.Negative"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/base_margin_double"
+        android:layout_marginBottom="@dimen/base_margin"
+        android:textColor="@color/off_white"
+        app:layout_constraintBottom_toTopOf="@id/discountButton"
+        app:layout_constraintTop_toBottomOf="@id/deductibleBubble"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="startar idag"
+        android:drawablePadding="@dimen/base_margin"
+        android:drawableEnd="@drawable/ic_expand"
+        />
+
+    <Button
         android:id="@+id/discountButton"
         style="@style/HedvigButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_margin_double"
         android:layout_marginBottom="@dimen/button_shadow_offset"
         android:backgroundTint="@color/offer_background"
         android:textColor="@color/off_white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/deductibleBubble"
+        app:layout_constraintTop_toBottomOf="@id/dateButton"
         tools:text="@string/OFFER_ADD_DISCOUNT_BUTTON" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
