--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -111,6 +111,10 @@
         <item name="android:background">@drawable/button_border_purple</item>
     </style>
 
+    <style name="HedvigButton.Outlined.Negative">
+        <item name="android:background">@drawable/button_border_white</item>
+    </style>
+
     <style name="HedvigButton.Negative">
         <item name="android:textColor">@color/text_negative</item>
     </style>
