Created datePicker and added chooseStartDate to repository

--- a/app/src/main/res/layout/dialog_change_start_date.xml
+++ b/app/src/main/res/layout/dialog_change_start_date.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tool="http://schemas.android.com/tools"
     android:background="@drawable/bottom_sheet_dialog_no_title_fragment_background"
     android:orientation="vertical"
     android:paddingStart="@dimen/base_margin_triple"
@@ -35,36 +33,16 @@
         android:layout_marginTop="@dimen/base_margin"
         />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        style="@style/PickDateField"
+    <include
+        android:id="@+id/datePickButton"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/base_margin_sextuple"
-        android:gravity="center_vertical"
+        android:layout_height="80dp"
         android:layout_marginTop="@dimen/base_margin_sextuple"
-        android:paddingHorizontal="@dimen/base_margin_double">
-
-        <TextView
-            style="@style/Body.Regular"
-            android:textColor="@color/off_black"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="Datum" />
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity=""
-            android:src="@drawable/ic_arrow_drop_down"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        layout="@layout/date_pick_layout"
+        />
 
     <Button
+        android:id="@+id/chooseDateButton"
         style="@style/HedvigButton.Purple"
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
