--- a/app/src/main/res/drawable/background_pick_date.xml
+++ b/app/src/main/res/drawable/background_pick_date.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:color="@color/violet_200"
-    tools:background="@color/white">
-    <item android:id="@android:id/background">
-        <shape
-            android:padding="10dp"
-            android:shape="rectangle">
+    android:color="#AAAAAA">
+    <item>
+        <shape android:padding="16dp" android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/semi_light_gray" />
-            <corners android:radius="7dp" />
+                android:color="#d7d7dc" />
+            <corners android:radius="12dp"/>
         </shape>
     </item>
 </ripple>
