--- a/app/src/main/res/layout/dialog_change_start_date.xml
+++ b/app/src/main/res/layout/dialog_change_start_date.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tool="http://schemas.android.com/tools"
     android:background="@drawable/bottom_sheet_dialog_no_title_fragment_background"
     android:orientation="vertical"
     android:paddingStart="@dimen/base_margin_triple"
@@ -52,12 +53,13 @@
         />
 
     <TextView
+        android:id="@+id/autoSetDateText"
         style="@style/Body.Regular.Link"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/base_margin_double"
-        android:text="Aktivera när min gamla försäkring går ut"
+        tool:text="Aktivera när min gamla försäkring går ut"
         android:textStyle="bold" />
 
 
