Key Gear Tab Screen
Missing right now:

- GraphQL model classes (schema is not ready)
- Translations

We'll use this as a base for the rest of the feature implementation.

There are a lot of unfilled TODOs - these will be filled later

--- a/app/src/main/res/menu/logged_in_menu.xml
+++ b/app/src/main/res/menu/logged_in_menu.xml
@@ -10,6 +10,12 @@
         android:icon="@drawable/ic_claims"
         android:title="@string/TAB_TITLE_CLAIM" />
 
+    <!-- TODO: Text Key -->
+    <item
+        android:id="@+id/key_gear"
+        android:icon="@drawable/ic_claims"
+        android:title="Prylbanken" />
+
     <item
         android:id="@+id/referrals"
         android:icon="@drawable/ic_referrals"
