--- a/app/src/main/res/drawable/background_pick_date.xml
+++ b/app/src/main/res/drawable/background_pick_date.xml
@@ -2,11 +2,11 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="#AAAAAA">
     <item>
-        <shape android:padding="16dp" android:shape="rectangle">
+        <shape android:padding="@dimen/base_margin_double" android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="#d7d7dc" />
-            <corners android:radius="12dp"/>
+                android:color="@color/semi_light_gray" />
+            <corners android:radius="@dimen/pick_date_button_corner_radius"/>
         </shape>
     </item>
 </ripple>
