--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -148,4 +148,11 @@
     <dimen name="expandable_content_view_bottom_fade_out_height">100dp</dimen>
     <dimen name="settings_custom_offset">11dp</dimen>
     <dimen name="ratings_dialog_minimum_width">250dp</dimen>
+
+    <dimen name="pick_date_button_corner_radius">12dp</dimen>
+    <dimen name="button_border_white_padding">10dp</dimen>
+    <dimen name="button_border_white_corner_radius">120dp</dimen>
+    <dimen name="date_pick_button_height">60dp</dimen>
+
+
 </resources>
