--- a/app/src/main/res/layout/dialog_change_start_date.xml
+++ b/app/src/main/res/layout/dialog_change_start_date.xml
@@ -46,7 +46,7 @@
 
     <Button
         android:id="@+id/chooseDateButton"
-        style="@style/HedvigButton.Purple.inactive"
+        style="@style/HedvigButton.Purple"
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
