Fixed so it works in dark mode

--- a/app/src/main/res/layout/date_pick_layout.xml
+++ b/app/src/main/res/layout/date_pick_layout.xml
@@ -45,9 +45,8 @@
     <TextView
         android:id="@+id/dateHint"
         style="@style/Body"
-        android:textColor="@color/off_black"
         android:layout_gravity="center_vertical"
-        android:background="@color/white"
+        android:background="@color/background_elevation_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_double"
