--- a/app/src/main/res/layout/key_gear_item.xml
+++ b/app/src/main/res/layout/key_gear_item.xml
@@ -16,7 +16,7 @@
 
     <TextView
         android:id="@+id/itemCategory"
-        style="@style/Body.Regular"
+        style="@style/Body.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|bottom"
