--- a/app/src/main/res/layout/create_key_gear_item_new_photo.xml
+++ b/app/src/main/res/layout/create_key_gear_item_new_photo.xml
@@ -1,40 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/root"
+    android:id="@+id/addPhoto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/key_gear_card_height"
-    android:layout_gravity="center"
+    android:layout_height="@dimen/create_key_gear_add_photo_height"
     android:background="@drawable/background_rounded_corners_ripple"
     android:backgroundTint="@color/violet_100"
-    android:orientation="vertical"
-    tools:layout_width="160dp">
+    android:clickable="true"
+    android:focusable="true">
 
     <ImageView
-        android:id="@+id/createNewItemIcon"
+        android:id="@+id/addPhotoIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@null"
-        app:layout_constraintBottom_toTopOf="@id/createNewItemLabel"
+        app:layout_constraintBottom_toTopOf="@id/addPhotoLabel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
-        app:srcCompat="@drawable/ic_chat_attach_file" />
+        app:srcCompat="@drawable/ic_add_photo" />
 
     <!-- TODO: Text Key -->
     <TextView
-        android:id="@+id/createNewItemLabel"
+        android:id="@+id/addPhotoLabel"
         style="@style/Body.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_margin"
-        android:text="Lägg till en pryl"
+        android:text="Lägg till foto"
         android:textColor="@color/purple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/createNewItemIcon" />
+        app:layout_constraintTop_toBottomOf="@id/addPhotoIcon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
