--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -149,4 +149,5 @@
     <dimen name="settings_custom_offset">11dp</dimen>
     <dimen name="ratings_dialog_minimum_width">250dp</dimen>
     <dimen name="key_gear_card_height">200dp</dimen>
+    <dimen name="create_key_gear_add_photo_height">250dp</dimen>
 </resources>
