--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -91,7 +91,18 @@
     <item name="phoneNumberInputContainer" type="id" />
     <item name="profileReferralRow" type="id" />
     <item name="iconNavigateNext" type="id" />
-    <item name="spring_scale_x" type="id" />
-    <item name="spring_scale_y" type="id" />
-    <item name="spring_translation_y" type="id" />
+    <item name="translation_x" type="id" />
+    <item name="translation_y" type="id" />
+    <item name="translation_z" type="id" />
+    <item name="scale_x" type="id" />
+    <item name="scale_y" type="id" />
+    <item name="rotation" type="id" />
+    <item name="rotation_x" type="id" />
+    <item name="rotation_y" type="id" />
+    <item name="x" type="id" />
+    <item name="y" type="id" />
+    <item name="z" type="id" />
+    <item name="alpha" type="id" />
+    <item name="scroll_x" type="id" />
+    <item name="scroll_y" type="id" />
 </resources>
