--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -11,8 +11,8 @@
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/chat_top_bar_height"
-        android:background="@color/background_elevation_1"
+        android:layout_height="wrap_content"
+        android:background="@color/background_semi_transparent"
         android:elevation="2dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
@@ -22,7 +22,7 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/chat_top_bar_height"
             android:layout_gravity="center_vertical|start"
             android:layout_marginStart="@dimen/base_margin"
             android:background="?attr/selectableItemBackgroundBorderless"
@@ -78,17 +78,17 @@
             android:visibility="visible"
             app:srcCompat="@drawable/ic_settings"
             tools:visibility="visible" />
-
     </FrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:clipToPadding="false"
         android:id="@+id/messages"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:paddingBottom="@dimen/base_margin"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@id/input"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_weight="1"
         app:reverseLayout="true"
         tools:listitem="@layout/chat_message_hedvig" />
