--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,11 +11,13 @@
         <item name="android:fontFamily">@font/circular_book</item>
     </style>
 
-    <style name="Hedvig.Theme" parent="Hedvig.Theme.V21" />
+    <style name="Hedvig.Theme" parent="Hedvig.Theme.V21" >
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
 
     <style name="Hedvig.Theme.Marketing" >
         <item name="android:navigationBarColor">@android:color/transparent</item>
-        <!-- Optional, if drawing behind the status bar too -->
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
