--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
     <style name="Hedvig.Theme" parent="Hedvig.Theme.V21" >
         <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="colorPrimary">@color/transparent</item>
     </style>
 
     <style name="Hedvig.Theme.Marketing" >
