--- a/app/src/main/res/layout/key_gear_new_item.xml
+++ b/app/src/main/res/layout/key_gear_new_item.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_margin"
         android:text="Lägg till en pryl"
-        android:textColor="@color/purple"
+        android:textColor="@color/link_purple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
