--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -14,6 +14,11 @@
         <item name="android:windowLightStatusBar">false</item>
     </style>
 
+    <style name="Hedvig.Theme.Chat">
+        <item name="android:statusBarColor">@color/black</item>
+        <item name="android:windowLightStatusBar">false</item>
+    </style>
+
     <style name="Hedvig.Theme.Marketing">
         <item name="android:statusBarColor">@color/black</item>
         <item name="android:windowLightStatusBar">false</item>
