--- a/app/src/main/res/values-v27/styles.xml
+++ b/app/src/main/res/values-v27/styles.xml
@@ -8,9 +8,11 @@
     </style>
 
     <style name="Hedvig.Theme" parent="Hedvig.Theme.V27">
-        <item name="android:windowLightNavigationBar">false</item>
+        <item name="android:windowLightNavigationBar">true</item>
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:navigationBarColor">@color/com_facebook_blue</item>
+        <item name="android:statusBarColor">@color/com_facebook_blue</item>
     </style>
 
     <style name="Hedvig.Theme.Offer">
